--- a/Style.css
+++ b/Style.css
@@ -12,7 +12,7 @@ h2:hover {
     box-shadow: 2px 2px 5px goldenrod;
     background-color:black;
     color: floralwhite;
-    
+    cursor:pointer;
 }
 div{
     display: flex;
